# customer-service-agent

./: .env.example  .gitignore  DEPLOY_NOW.md  Dockerfile  FIX_TOKEN_PERMISSIONS.md  GITHUB_TOKEN_GUIDE.md  Makefile  QUICK_DEPLOY.md  README.md  RENDER_DEPLOY.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml
docs/: api.md  architecture.md  evaluation.md
simulation/: __init__.py  ecommerce.py  seed_data.py
src/: __init__.py  config.py  main.py
src/agent/: __init__.py  core.py  guardrails.py  llm.py  memory.py  state.py
src/api/: __init__.py  routes.py  schemas.py
src/db/: __init__.py  models.py  session.py  transaction.py
src/db/migrations/: env.py
src/eval/: __init__.py  metrics.py  runner.py
src/eval/scenarios/: account.yaml  logistics.yaml  multi_turn.yaml  order.yaml  refund.yaml  security.yaml
src/rag/: __init__.py  retriever.py
src/rag/policies/: account_policy.md  refund_policy.md  shipping_policy.md
src/tools/: __init__.py  executor.py  registry.py  schema.py
src/tools/builtin/: __init__.py  account.py  logistics.py  order.py  payment.py  user.py
tests/unit/: test_guardrails.py  test_state.py  test_tools.py
